Archive2/55/77f94bc88beadf/output
main.cpp:20:21: error: use 'template' keyword to treat 'foo' as a dependent template name
     return this->a.foo<V>();
                    ^
                    template 
main.cpp:32:13: warning: unused variable 'aTest' [-Wunused-variable]
    double  aTest = a.foo<double>();
            ^
main.cpp:34:12: warning: unused variable 'c' [-Wunused-variable]
    double c = b.foo2< double >();
           ^
2 warnings and 1 error generated.
